@@ -1,57 +1,111 @@
-.ba { border: var(--border-width) solid var(--border-color); }
-.bl { border-left: var(--border-width) solid var(--border-color); }
-.br { border-right: var(--border-width) solid var(--border-color); }
-.bt { border-top: var(--border-width) solid var(--border-color); }
+.ba { border:        var(--border-width) solid var(--border-color); }
+.bl { border-left:   var(--border-width) solid var(--border-color); }
+.br { border-right:  var(--border-width) solid var(--border-color); }
+.bt { border-top:    var(--border-width) solid var(--border-color); }
 .bb { border-bottom: var(--border-width) solid var(--border-color); }
 
-.bc-black { --border-color: var(--black); }
-.bc-black-95 { --border-color: var(--black-95); }
-.bc-black-90 { --border-color: var(--black-90); }
-.bc-black-80 { --border-color: var(--black-80); }
-.bc-black-70 { --border-color: var(--black-70); }
-.bc-black-60 { --border-color: var(--black-60); }
-.bc-black-50 { --border-color: var(--black-50); }
-.bc-black-40 { --border-color: var(--black-40); }
-.bc-black-30 { --border-color: var(--black-30); }
-.bc-black-20 { --border-color: var(--black-20); }
-.bc-black-10 { --border-color: var(--black-10); }
-.bc-black-05 { --border-color: var(--black-05); }
-.bc-black-025 { --border-color: var(--black-025); }
+.bc-black      { --border-color: var(--black);      }
+.bc-black-95   { --border-color: var(--black-95);   }
+.bc-black-90   { --border-color: var(--black-90);   }
+.bc-black-80   { --border-color: var(--black-80);   }
+.bc-black-70   { --border-color: var(--black-70);   }
+.bc-black-60   { --border-color: var(--black-60);   }
+.bc-black-50   { --border-color: var(--black-50);   }
+.bc-black-40   { --border-color: var(--black-40);   }
+.bc-black-30   { --border-color: var(--black-30);   }
+.bc-black-20   { --border-color: var(--black-20);   }
+.bc-black-10   { --border-color: var(--black-10);   }
+.bc-black-05   { --border-color: var(--black-05);   }
+.bc-black-025  { --border-color: var(--black-025);  }
 .bc-black-0125 { --border-color: var(--black-0125); }
 
-.bc-white { --border-color: var(--white); }
-.bc-white-95 { --border-color: var(--white-95); }
-.bc-white-90 { --border-color: var(--white-90); }
-.bc-white-80 { --border-color: var(--white-80); }
-.bc-white-70 { --border-color: var(--white-70); }
-.bc-white-60 { --border-color: var(--white-60); }
-.bc-white-50 { --border-color: var(--white-50); }
-.bc-white-40 { --border-color: var(--white-40); }
-.bc-white-30 { --border-color: var(--white-30); }
-.bc-white-20 { --border-color: var(--white-20); }
-.bc-white-10 { --border-color: var(--white-10); }
-.bc-white-05 { --border-color: var(--white-05); }
-.bc-white-025 { --border-color: var(--white-025); }
+.bc-white      { --border-color: var(--white);      }
+.bc-white-95   { --border-color: var(--white-95);   }
+.bc-white-90   { --border-color: var(--white-90);   }
+.bc-white-80   { --border-color: var(--white-80);   }
+.bc-white-70   { --border-color: var(--white-70);   }
+.bc-white-60   { --border-color: var(--white-60);   }
+.bc-white-50   { --border-color: var(--white-50);   }
+.bc-white-40   { --border-color: var(--white-40);   }
+.bc-white-30   { --border-color: var(--white-30);   }
+.bc-white-20   { --border-color: var(--white-20);   }
+.bc-white-10   { --border-color: var(--white-10);   }
+.bc-white-05   { --border-color: var(--white-05);   }
+.bc-white-025  { --border-color: var(--white-025);  }
 .bc-white-0125 { --border-color: var(--white-0125); }
 
-.bc-aqua { --border-color: var(--aqua); }
-.bc-blue { --border-color: var(--blue); }
-.bc-navy { --border-color: var(--navy); }
-.bc-teal { --border-color: var(--teal); }
-.bc-green { --border-color: var(--green); }
-.bc-olive { --border-color: var(--olive); }
-.bc-lime { --border-color: var(--lime); }
-.bc-yellow { --border-color: var(--yellow); }
-.bc-orange { --border-color: var(--orange); }
-.bc-red { --border-color: var(--red); }
+.bc-aqua    { --border-color: var(--aqua);    }
+.bc-blue    { --border-color: var(--blue);    }
+.bc-navy    { --border-color: var(--navy);    }
+.bc-teal    { --border-color: var(--teal);    }
+.bc-green   { --border-color: var(--green);   }
+.bc-olive   { --border-color: var(--olive);   }
+.bc-lime    { --border-color: var(--lime);    }
+.bc-yellow  { --border-color: var(--yellow);  }
+.bc-orange  { --border-color: var(--orange);  }
+.bc-red     { --border-color: var(--red);     }
 .bc-fuchsia { --border-color: var(--fuchsia); }
-.bc-purple { --border-color: var(--purple); }
-.bc-maroon { --border-color: var(--maroon); }
+.bc-purple  { --border-color: var(--purple);  }
+.bc-maroon  { --border-color: var(--maroon);  }
 
-.br1 { border-radius: var(--br1); }
-.br2 { border-radius: var(--br2); }
-.br3 { border-radius: var(--br3); }
-.br4 { border-radius: var(--br4); }
-.br5 { border-radius: var(--br5); }
-.br100 { border-radius: 100%; }
-.br999 { border-radius: 999px; }
+.bc-black,
+.bc-black-95,
+.bc-black-90,
+.bc-black-80,
+.bc-black-70,
+.bc-black-60,
+.bc-black-50,
+.bc-black-40,
+.bc-black-30,
+.bc-black-20,
+.bc-black-10,
+.bc-black-05,
+.bc-black-025,
+.bc-black-0125,
+.bc-white,
+.bc-white-95,
+.bc-white-90,
+.bc-white-80,
+.bc-white-70,
+.bc-white-60,
+.bc-white-50,
+.bc-white-40,
+.bc-white-30,
+.bc-white-20,
+.bc-white-10,
+.bc-white-05,
+.bc-white-025,
+.bc-white-0125,
+.bc-aqua,
+.bc-blue,
+.bc-navy,
+.bc-teal,
+.bc-green,
+.bc-olive,
+.bc-lime,
+.bc-yellow,
+.bc-orange,
+.bc-red,
+.bc-fuchsia,
+.bc-purple,
+.bc-maroon {
+  border-color: var(--border-color);
+}
+
+.br1   { --border-radius: var(--br1); }
+.br2   { --border-radius: var(--br2); }
+.br3   { --border-radius: var(--br3); }
+.br4   { --border-radius: var(--br4); }
+.br5   { --border-radius: var(--br5); }
+.br100 { --border-radius:      100%;  }
+.br999 { --border-radius:      999px; }
+
+.br1,
+.br2,
+.br3,
+.br4,
+.br5,
+.br100,
+.br999 {
+  border-radius: var(--border-radius);
+}
